# Fractals

./: README.md
Hilbert/: hilbert.py
Hilbert/Howto/: README.md  hilbert-howto-1.py  hilbert-howto-2.py  hilbert-howto-3.py  hilbert-howto-4.py  hilbert-howto-5.py  hilbert-howto-6.py  hilbert-howto-7.py  hilbert-howto-8.py  hilbert-howto-9.py
Julia_Set/: README.md
Julia_Set/Shader_Library/: index.html  julia.frag  webglsl.js
Mandelbrot/: Mandelbrot Set.ipynb  README.md  Render a Mandelbrot Set.ipynb  mandelbrot_ascii.py
Mandelbrot/Python/: mandelbrot_ascii.py
Mandelbrot/Rust/: Cargo.toml  README.md
Mandelbrot/Rust/src/: main.rs
Mandelbrot/Shader_Library/: AUTHORS  README.md  index.css  index.html  mandelbrot.frag  webglsl.js
Mandelbrot/Zig/: README.md  build.zig  mandelbrot.zig
Sierpinski/: AUTHORS  LICENSE  README.md  sierpinski.py
